Made gif responsive

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             I just completed the JavaScript Algorithms and Data Structures course of freeCodeCamp.<br>
             One word to describe my feeling? Amazing!<br>
             Why? Because I was stuck in 2 headachy last projects: Telephone Number Validator & Cash Register. And I solved them by myself!</p>
-        <iframe src="https://giphy.com/embed/nYvleOkmFYM6xfYG7v" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
+        <iframe src="https://giphy.com/embed/nYvleOkmFYM6xfYG7v" width="480" height="270" frameBorder="0" allowFullScreen></iframe>
         <p>    
             Of course there was time that I wanted to take a hint from solution page, but to my surprise, there is no solution for these projects! That makes sense, because no challenge only has one solution. So, it was a great motivation for me to try harder.<br>
         </p>
